@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 """Release data for the IPython project.
 
-$Id: Release.py 1291 2006-05-08 05:51:42Z fperez $"""
+$Id: Release.py 1344 2006-06-03 21:08:59Z fperez $"""
 
 #*****************************************************************************
 #       Copyright (C) 2001-2006 Fernando Perez <fperez@colorado.edu>
@@ -22,10 +22,9 @@ name = 'ipython'
 # because bdist_rpm does not accept dashes (an RPM) convention, and
 # bdist_deb does not accept underscores (a Debian convention).
 
+version = '0.7.2'
 
-version = '0.7.2.rc1'
-
-revision = '$Revision: 1291 $'
+revision = '$Revision: 1344 $'
 
 description = "An enhanced interactive Python shell."
 
