@@ -1,3 +1,8 @@
+2006-06-03  Fernando Perez  <Fernando.Perez@colorado.edu>
+
+	* IPython/Release.py (version): Mark 0.7.2 version to start
+	testing for release on 06/06.
+
 2006-05-31  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* scripts/irunner: thin script interface so users don't have to
